hands check improvements